# portfolio

./: .gitignore  Cargo.toml  build.sh  serve.sh
.github/workflows/: deploy.yml
js/: animation.js  animations.js  audio.js  crt-shader.js  debug.js  effects.js  events.js  index.js  model.js  mouse.js  performance.js  scene.js  shader.js  sound.js  terminal3d.js
src/: lib.rs
src/ascii/: logo-min.txt  logo.txt  mod.rs  sl.rs  steam.rs  user.rs
src/boot/: boot.rs  mod.rs
src/commands/: commands.rs  filesystem.rs  misc.rs  mod.rs  processor.rs  system.rs
src/input/: history.rs  mod.rs  setup.rs
src/terminal/: autocomplete.rs  buffer.rs  core.rs  linkmap.rs  mod.rs  renderer.rs
src/utils/: panic.rs
static/: index.html  styles.css
